# prometheus

./: README.md  README_MODULARIZATION.md  TDD_README.md  TDD_SYSTEM_COMPLETE_README.md  TESTING_GUIDE.md  ai_agent_system.py  comprehensive_test_suite.py  config.py  demo.py  demo_functional_system.py  demo_startup.py  enhanced_prometheus_company.py  final_comprehensive_test.py  main.py  mars_mission_demo.py  mars_mission_final_demo.py  mars_mission_simple_demo.py  multi_agent_company_system.py  p2p_core.py  prometheus.py  prometheus_backup_demo.py  prometheus_launcher.py  prometheus_modular.py  prometheus_old.py  pyproject.toml  requirements.txt  setup.py  simple_demo.py  simple_memory_test.py  simple_tdd_demo.py  start.py  start_prometheus.py  tdd_config.json  tdd_prometheus.py  tdd_system_runner.py  test_encoding_fixes.py  test_learnings.json  test_memory_fix.py  test_p2p_core.py  test_self_evolution.py  (+3 more)
agents/: backend_agent.py  database_agent.py  deployment_agent.py  frontend_agent.py  task_planner.py  testing_agent.py  ui_ux_agent.py
apps/backend/: .env  Dockerfile  README.md  pytest.ini  requirements.txt
apps/backend/app/: db.py  main.py
apps/backend/app/models/: task_models.py
apps/backend/app/routers/: tasks.py
apps/backend/app/services/: task_service.py
apps/backend/tests/: test_tasks.py
examples/aerospace_calculator/: tdd_implementation.py
examples/machine_learning/: tdd_ml_system.py
examples/web_application/: tdd_web_app.py
prometheus/: __init__.py
prometheus_modules/: __init__.py  config.py  core_ai.py  coverage.py  models.py  orchestrator.py  utils.py
self_evolution/: test.json
tests/: test_tdd_prometheus.py
